# docprep

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-test.yml  deploy-docs.yml  publish-pypi.yml
benchmarks/: bench_concurrency.py
docs/: README.md  adapters.md  architecture.md  cli-reference.md  configuration.md  export.md  getting-started.md  index.md  lifecycle.md  performance.md  plugins.md  python-api.md
docs/decisions/: 0001-identity-model.md  0002-adapter-not-parser.md  0003-chunking-strategy.md  0004-plugin-registry.md  0005-diff-then-sync.md  0006-export-contract.md  0007-sqlalchemy-canonical-persistence.md  index.md  template.md
examples/: README.md  adapter_markitdown.py  benchmark_incremental_sync.py  changed_only_export.py  cli_quickstart.sh  custom_plugin.py  error_handling.py  incremental_sync_demo.py  large_corpus.py  markdown_to_sqlite.py  quickstart.py  vector_store_integration.py
examples/configs/: advanced.toml  minimal.toml  standard.toml
examples/docling_to_postgres/: .env.example  README.md  docker-compose.yml  requirements.txt  run.py
examples/eval/: README.md  sample_corpus.json
examples/github_docs_incremental_sync/: README.md  requirements.txt  run.py
examples/markitdown_to_jsonl/: README.md  docprep.toml  run.py
examples/plugin-template/: README.md  pyproject.toml
examples/plugin-template/src/my_docprep_plugin/: chunker.py
examples/plugin-template/tests/: test_chunker.py
examples/sample_docs/: api-reference.md  changelog.md  getting-started.md
src/docprep/: __init__.py  __main__.py  checkpoint.py  config.py  diff.py  exceptions.py  export.py  ids.py  ingest.py  metadata.py  plugins.py  progress.py  registry.py  scope.py
src/docprep/adapters/: __init__.py  protocol.py
src/docprep/chunkers/: __init__.py  _markdown.py  heading.py  protocol.py  size.py  token.py
src/docprep/cli/: _common.py  formatters.py  logging.py  main.py
src/docprep/cli/commands/: delete.py  diff.py  export.py  ingest.py  inspect.py  migrate.py  preview.py  prune.py  stats.py
src/docprep/eval/: __init__.py  benchmark.py  corpus.py
src/docprep/loaders/: __init__.py  filesystem.py  markdown.py  protocol.py  types.py
src/docprep/models/: __init__.py  domain.py
src/docprep/parsers/: __init__.py  html.py  markdown.py  multi.py  plaintext.py  protocol.py  rst.py
src/docprep/sinks/: __init__.py  orm.py  protocol.py  sqlalchemy.py
tests/: test_annotations.py  test_checkpoint.py  test_chunker_coverage.py  test_cli.py  test_cli_inspect.py  test_cli_ops.py  test_config.py  test_config_env.py  test_coverage_final.py  test_coverage_misc.py  test_diff.py  test_diff_checkpoint_registry.py  test_domain.py  test_eval.py  test_eval_corpus.py  test_exceptions.py  test_export.py  test_export_jsonl.py  test_filesystem_loader.py  test_formatters.py  test_formatters_coverage.py  test_golden_fixtures.py  test_heading_chunker.py  test_html_parser.py  test_ids.py  test_ingest.py  test_init_convenience.py  test_integration_e2e.py  test_invariants.py  test_loader_types.py  test_logging.py  test_markdown_loader.py  test_markdown_parser.py  test_metadata.py  test_multi_parser.py  test_orm.py  test_plaintext_parser.py  test_plugins.py  test_progress.py  test_protocols.py  (+10 more)
tests/fixtures/: blockquote_nested_list.md  fenced_code_blocks.md  frontmatter_heavy.md  heading_free.md  korean_english_mixed.md  large_table.md  link_heavy.md  single_long_paragraph.md  unicode_emoji.md
